--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,6 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-ads:10.2.1'
+    compile 'com.google.android.gms:play-services-ads-lite:10.2.1'
     compile 'eu.chainfire:libsuperuser:1.0.0.201608240809'
 }
