--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "net.theluckycoder.advancedreboot"
         minSdkVersion 14
-        targetSdkVersion 25
-        versionCode 5
-        versionName "1.3.1"
+        targetSdkVersion 26
+        versionCode 6
+        versionName "1.3.2"
         resConfigs "en"
         vectorDrawables.useSupportLibrary = true
     }
@@ -22,8 +22,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-ads-lite:10.2.1'
+    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
+    compile 'com.android.support:cardview-v7:26.0.0-beta2'
+    compile 'com.google.firebase:firebase-core:11.0.2'
+    compile 'com.google.android.gms:play-services-ads-lite:11.0.2'
     compile 'eu.chainfire:libsuperuser:1.0.0.201608240809'
 }
+
+apply plugin: 'com.google.gms.google-services'
