--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,25 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "net.theluckycoder.advancedreboot"
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 6
-        versionName "1.3.2"
+        versionCode 7
+        versionName "1.3.3"
         resConfigs "en"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
+        debug {
+            resValue "string", "firebase_disabled", "true"
+            versionNameSuffix " DEBUG"
+        }
         release {
+            resValue "string", "firebase_disabled", "false"
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -22,11 +28,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
-    compile 'com.android.support:cardview-v7:26.0.0-beta2'
-    compile 'com.google.firebase:firebase-core:11.0.2'
-    compile 'com.google.android.gms:play-services-ads-lite:11.0.2'
-    compile 'eu.chainfire:libsuperuser:1.0.0.201608240809'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'com.android.support:cardview-v7:26.0.1'
+    implementation 'com.google.firebase:firebase-core:11.2.0'
+    implementation 'com.google.android.gms:play-services-ads-lite:11.2.0'
+
+    implementation 'eu.chainfire:libsuperuser:1.0.0.201608240809'
 }
 
 apply plugin: 'com.google.gms.google-services'
