--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="net.theluckycoder.advancedreboot">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -13,7 +17,10 @@
         tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="android.max_aspect"
-            android:value="2.1" />
+            android:value="2.1" /><meta-data
+        android:name="firebase_analytics_collection_deactivated"
+        android:value="@string/firebase_disabled" />
+
 
         <activity
             android:name=".MainActivity">
