--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,38 +2,44 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.0"
     defaultConfig {
         applicationId "net.theluckycoder.advancedreboot"
         minSdkVersion 14
-        targetSdkVersion 26
-        versionCode 7
-        versionName "1.3.3"
+        targetSdkVersion 27
+        versionCode 9
+        versionName "1.4.1"
         resConfigs "en"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         debug {
-            resValue "string", "firebase_disabled", "true"
+            resValue "bool", "firebase_disabled", "true"
             versionNameSuffix " DEBUG"
         }
         release {
-            resValue "string", "firebase_disabled", "false"
+            resValue "bool", "firebase_disabled", "false"
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    implementation 'com.android.support:appcompat-v7:26.0.1'
-    implementation 'com.android.support:cardview-v7:26.0.1'
-    implementation 'com.google.firebase:firebase-core:11.2.0'
-    implementation 'com.google.android.gms:play-services-ads-lite:11.2.0'
+    implementation 'com.android.support:support-v4:27.0.1'
+    implementation 'com.android.support:appcompat-v7:27.0.1'
+    implementation 'com.android.support:cardview-v7:27.0.1'
+
+    implementation 'com.google.firebase:firebase-core:11.6.0'
+    implementation 'com.google.firebase:firebase-ads:11.6.0'
 
     implementation 'eu.chainfire:libsuperuser:1.0.0.201608240809'
 }
