--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,46 +2,43 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.0"
+    compileSdkVersion 30
+
     defaultConfig {
         applicationId "net.theluckycoder.advancedreboot"
         minSdkVersion 14
-        targetSdkVersion 27
-        versionCode 9
-        versionName "1.4.1"
+        targetSdkVersion 30
+        versionCode 10
+        versionName "1.5.0"
         resConfigs "en"
         vectorDrawables.useSupportLibrary = true
     }
+
     buildTypes {
         debug {
-            resValue "bool", "firebase_disabled", "true"
             versionNameSuffix " DEBUG"
         }
         release {
-            resValue "bool", "firebase_disabled", "false"
             minifyEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            zipAlignEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    implementation 'com.android.support:support-v4:27.0.1'
-    implementation 'com.android.support:appcompat-v7:27.0.1'
-    implementation 'com.android.support:cardview-v7:27.0.1'
-
-    implementation 'com.google.firebase:firebase-core:11.6.0'
-    implementation 'com.google.firebase:firebase-ads:11.6.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0'
+    implementation "androidx.preference:preference-ktx:1.1.1"
 
     implementation 'eu.chainfire:libsuperuser:1.0.0.201608240809'
 }
-
-apply plugin: 'com.google.gms.google-services'
