--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,37 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="net.theluckycoder.advancedreboot">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <meta-data
-            android:name="android.max_aspect"
-            android:value="2.1" />
-        <meta-data
-            android:name="firebase_analytics_collection_deactivated"
-            android:value="@bool/firebase_disabled" />
 
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings_and_info" />
+
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.1" />
+
     </application>
 
 </manifest>
